made page responsive

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="slidecontainer">
                     <input type="range" min="16" max="80" value="16" class="slider" id="grid-size">
-                    <p>Size: <span id="grid-output"></span></p>
+                    <p id="slider-output">Size: <span id="grid-output"></span></p>
                 </div>
 
             </div>
