changed etch a sketch ui

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Etch-A-Sketch</title>
+        <title>Pixel-Sketch</title>
         <link rel="stylesheet" href="styles.css">
         <link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
+        <link rel="icon" href="images/icon.png" type="image/png">
         <script src="script.js" defer></script> 
     </head>
 
@@ -19,14 +20,16 @@
         <div class="interface">
 
             <div id="controls">
+                <input id="color-picker" type="color" value="#000000"/>
+
+                <div id="color-name">Colour Name</div>
+
                 <div class="buttons">
-                    <button id="greyscale">Greyscale</button>
-                    <button id="pastel">Pastel</button>
-                    <button id="neutral">Neutral</button>
+                    <button id="eraser">Eraser</button>
                     <button id="clear">Clear</button>
                 </div>
                 <div class="slidecontainer">
-                    <input type="range" min="16" max="80" value="16" class="slider" id="grid-size">
+                    <input type="range" min="6" max="50" value="16" class="slider" id="grid-size">
                     <p id="slider-output">Size: <span id="grid-output"></span></p>
                 </div>
 
