--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             <div id="controls">
                 <input id="color-picker" type="color" value="#000000"/>
 
-                <div id="color-name">Colour Name</div>
+                <div id="color-name">Choose a colour</div>
 
                 <div class="buttons">
                     <button id="eraser">Eraser</button>
                     <button id="clear">Clear</button>
                 </div>
                 <div class="slidecontainer">
-                    <input type="range" min="6" max="50" value="16" class="slider" id="grid-size">
+                    <input type="range" min="5" max="50" value="16" class="slider" id="grid-size">
                     <p id="slider-output">Size: <span id="grid-output"></span></p>
                 </div>
 
